# flipper-trivia-zero

./: .clang-format  .gitignore  BRAINSTORM.md  CHANGELOG.md  LICENSE  Makefile  README.md  application.fam  main.c  release-please-config.json  version.h
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
data/: blacklist.txt  trivia_en.idx  trivia_en.tsv  trivia_es.idx  trivia_es.tsv
icons/: icon.icon
include/: version.h
include/app/: trivia_zero_app.h
include/data/: embedded_pack.h
include/domain/: anti_repeat.h  category.h  history_buffer.h  question_pool.h
include/i18n/: strings.h
include/infrastructure/: pack_reader.h  settings_storage.h
include/platform/: random_port.h
include/ui/: question_view.h
src/app/: trivia_zero_app.c
src/data/: embedded_pack_en.c  embedded_pack_es.c
src/domain/: anti_repeat.c  category.c  history_buffer.c  (+1 more)
tests/: embedded_pack_stub.c  test_anti_repeat.c  test_category.c  test_history_buffer.c  test_pack_integration.c  test_pack_reader.c  test_question_pool.c  test_question_view_layout.c  test_settings_storage.c  test_strings.c  test_version.c
tools/: README.md  build_pack.py  pyproject.toml  requirements-dev.txt  requirements.txt
tools/tests/: test_blacklist.py  test_category_map.py  test_e2e_with_c_parser.py  test_mc_phrasing.py  test_opentdb.py  test_pack_writer.py  test_pipeline.py  test_smoke.py  test_translate.py
tools/trivia_pack/: __init__.py  blacklist.py  category_map.py  mc_phrasing.py  models.py  opentdb.py  pack_writer.py  pipeline.py  translate.py
(+9 files in other folders)
